feat: Add Video to template

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <title>Video pLayer</title>
 </head>
 <body>
-  <h1>video Player</h1>
+  <h1>Video Player</h1>
+
+  <button>Play</button>
+  <button>Pause</button>
+  <button>+10S</button>
+  <button>-10S</button>
+
+  <video autoplay muted controls src="./videos/TOO Fast.mp4" width="50%"></video>
+
 </body>
 </html>
