--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
+
   <title>Video pLayer</title>
 </head>
 <body>
   <h1>Video Player</h1>
 
-  <button>Play</button>
-  <button>Pause</button>
-  <button>+10S</button>
-  <button>-10S</button>
+  <button class="button" id="play"></button>
+  <button class="button" id="pause"></button>
+  <button id="forward"></button>
+  <button id="backward"></button>
 
   <video autoplay muted controls src="./videos/TOO Fast.mp4" width="50%"></video>
 
