--- a/index.html
+++ b/index.html
@@ -20,38 +20,23 @@
 
     <div class="wrapper">
         <div class="player">
-            <button class="button" id="play" aria-label="Play video" title="Play video"></button>
-            <button class="button" hidden id="pause" aria-label="Pause video" title="Pause video"></button>
-            <button class="button" id="forward" aria-label="Forward video 10 seconds"
-                title="Forward video 10 seconds"></button>
-            <button class="button" id="backward" aria-label="Backward video 10 seconds"
-                title="Backward video 10 seconds"></button>
-
+            <h2 class="player-title"> Exposure</h2>
+            <div class="player-actions">
+                <button class="button" id="backward" aria-label="Backward video 10 seconds"
+                    title="Backward video 10 seconds"></button>
+                <button class="button" id="play" aria-label="Play video" title="Play video"></button>
+                <button class="button" hidden id="pause" aria-label="Pause video" title="Pause video"></button>
+                <button class="button" id="forward" aria-label="Forward video 10 seconds"
+                    title="Forward video 10 seconds"></button>
+            </div>
             <video id="videoPlayer" poster="./images//poster.png" muted src="./videos/TOO Fast.mp4"
                 width="400px"></video>
+            <div class="player-progress">
+                <input type="range">
+            </div>
         </div>
     </div>
-    <script>
-        const $video = document.querySelector('#videoPlayer');
-        const $play = document.querySelector('#play');
-        const $pause = document.querySelector('#pause');
-        const $forward = document.querySelector('#forward');
-        const $backward = document.querySelector('#backward');
-
-        const handlePlay = () => {
-            $video.play();
-            $play.hidden = true;
-            $pause.hidden = false;
-        }
-
-        const handlePause = () => {
-            $video.pause();
-            $play.hidden = false;
-            $pause.hidden = true;
-        }
-
-        $play.addEventListener('click', handlePlay);
-        $pause.addEventListener('click', handlePause);
+    <script src="./javascript/index.js">
     </script>
 </body>
 
