--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <video id="videoPlayer" poster="./images//poster.png" muted src="./videos/TOO Fast.mp4"
                 width="400px"></video>
             <div class="player-progress">
-                <input type="range">
+                <input type="range" min="0" max="100" step="1">
             </div>
         </div>
     </div>
