--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
 </head>
 
 <body>
-    <h1>Video Player</h1>
-
     <div class="wrapper">
         <div class="player">
-            <h2 class="player-title"> Exposure</h2>
-            <div class="player-actions">
-                <button class="button" id="backward" aria-label="Backward video 10 seconds"
-                    title="Backward video 10 seconds"></button>
-                <button class="button" id="play" aria-label="Play video" title="Play video"></button>
-                <button class="button" hidden id="pause" aria-label="Pause video" title="Pause video"></button>
-                <button class="button" id="forward" aria-label="Forward video 10 seconds"
-                    title="Forward video 10 seconds"></button>
-            </div>
             <video id="videoPlayer" poster="./images//poster.png" muted src="./videos/TOO Fast.mp4"
                 width="400px"></video>
-            <div class="player-progress">
-                <input type="range" min="0" max="100" step="1">
+
+            <div class="player-overlay">
+                <h2 class="player-title"> Exposure</h2>
+                <div class="player-actions">
+                    <button class="button" id="backward" aria-label="Backward video 10 seconds"
+                        title="Backward video 10 seconds"></button>
+                    <button class="button" id="play" aria-label="Play video" title="Play video"></button>
+                    <button class="button" hidden id="pause" aria-label="Pause video" title="Pause video"></button>
+                    <button class="button" id="forward" aria-label="Forward video 10 seconds"
+                        title="Forward video 10 seconds"></button>
+                </div>
+                <div class="player-progress">
+                    <input id="progress" type="range" min="0" value=0 step="1">
+                </div>
             </div>
         </div>
     </div>
