feat: Video remote and sound

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="wrapper">
         <div class="player">
-            <video id="videoPlayer" poster="./images//poster.png" muted src="./videos/TOO Fast.mp4"
+            <video id="videoPlayer" poster="./images/poster.png" src="https://res.cloudinary.com/dicn9lfex/video/upload/v1645037549/TOO_Fast_h7h5su.mp4"
                 width="400px"></video>
 
             <div class="player-overlay">
